// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review when all data is present renders Review page with the field values 1`] = `
<div
  className="measure-6"
>
  <BackButton />
  <Title>
    Check your answers before sending your application
  </Title>
  <ReviewHeading
    editHref="/claims/name?claim_id=mock-id"
    editText="Edit"
  >
    Verify your identity
  </ReviewHeading>
  <ReviewRow
    label="Full name"
  >
    Bud Monstera Baxter
  </ReviewRow>
  <ReviewRow
    label="Date of birth"
  >
    **/**/****
  </ReviewRow>
  <ReviewRow
    label="Social security number"
  >
    *********
  </ReviewRow>
  <ReviewRow
    label="Massachusetts driver's license or ID"
  >
    *********
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/leave-reason?claim_id=mock-id"
    editText="Edit"
  >
    Leave details
  </ReviewHeading>
  <ReviewRow
    label="Leave type"
  >
    Medical leave
  </ReviewRow>
  <ReviewRow
    label="Leave duration"
  >
    9/21/2021 – 12/30/2021
  </ReviewRow>
  <ReviewRow
    label="Leave duration type"
  >
    Continuous leave
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/employment-status?claim_id=mock-id"
    editText="Edit"
  >
    Employment information
  </ReviewHeading>
  <ReviewRow
    label="Employment status"
  >
    Currently employed
  </ReviewRow>
  <ReviewRow
    label="Notified employer"
  >
    Notified employer on 6/25/2020
  </ReviewRow>
  <ButtonLink
    className="margin-top-3"
    href="/claims/confirm?claim_id=mock-id"
  >
    Confirm information is correct
  </ButtonLink>
</div>
`;

exports[`Review when data is empty does not render strings like 'null' or 'undefined' 1`] = `
<div
  className="measure-6"
>
  <BackButton />
  <Title>
    Check your answers before sending your application
  </Title>
  <ReviewHeading
    editHref="/claims/name?claim_id=mock-id"
    editText="Edit"
  >
    Verify your identity
  </ReviewHeading>
  <ReviewRow
    label="Full name"
  >
      
  </ReviewRow>
  <ReviewRow
    label="Date of birth"
  >
    **/**/****
  </ReviewRow>
  <ReviewRow
    label="Social security number"
  >
    *********
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/leave-reason?claim_id=mock-id"
    editText="Edit"
  >
    Leave details
  </ReviewHeading>
  <ReviewRow
    label="Leave type"
  >
    Medical leave
  </ReviewRow>
  <ReviewRow
    label="Leave duration"
  />
  <ReviewRow
    label="Leave duration type"
  >
    Continuous leave
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/employment-status?claim_id=mock-id"
    editText="Edit"
  >
    Employment information
  </ReviewHeading>
  <ButtonLink
    className="margin-top-3"
    href="/claims/confirm?claim_id=mock-id"
  >
    Confirm information is correct
  </ButtonLink>
</div>
`;
